[JSC]Squash alignment warning https://bugs.webkit.org/show_bug.cgi?id=238670

Unreviewed gardening.

Squash a "cast increases required alignment of target type" due to
poiner arithmetic via char*

Patch by Geza Lore <glore@igalia.com> on 2022-04-06

* wasm/WasmSignature.h:
(JSC::Wasm::Signature::storage):

Canonical link: https://commits.webkit.org/249304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292453 268f45cc-cd09-0410-ab3c-d52691b4dbfc